sobre nome trocado para Greg

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="card">
             <div class="profile-informations">
                 <img src="./src/img/foto-perfil.jpg" alt="imagem de perfil">
-                <p class="name">Victor Crest <span class="ages">26</span></p>
+                <p class="name">Victor Greg <span class="ages">26</span></p>
                 <p class="city">London</p>
             </div>
 
